# UniversalUI-rs2

./: .gitignore  README.md  test_linux.sh  test_windows.ps1
UniversalUI-Native/: CMakeLists.txt
UniversalUI-Native/UniversalUI-Native-rs/: CMakeLists.txt  Cargo.toml
UniversalUI-Native/UniversalUI-Native-rs/src/: lib.rs
UniversalUI-Native/src/: CMakeLists.txt  main.cpp
UniversalUI/include/core/: base.h  debug.h  lib.h  run.h  window.h
UniversalUI/include/core/base/: general.h  geometry.h
UniversalUI/include/core/graphics/: lib.h
UniversalUI/include/core/native/: event.h  lib.h  window.h
UniversalUICore/: Cargo.toml
UniversalUICore/src/: lib.rs
UniversalUICore/src/base/: mod.rs
UniversalUICore/src/debug/: mod.rs
UniversalUICore/src/graphics/: mod.rs
UniversalUICore/src/run/: mod.rs
UniversalUICore/src/window/: mod.rs  window_structs.rs
UniversalUI_Base/: Cargo.toml  README.md
UniversalUI_Base/src/: debug.rs  general.rs  geometry.rs  lib.rs
UniversalUI_Graphics/: Cargo.toml  README.md
UniversalUI_Graphics/src/: lib.rs
UniversalUI_Native/: Cargo.toml  README.md
UniversalUI_Native/src/: event.rs  lib.rs  window.rs
UniversalUI_Native/src/win32/: event.rs  init.rs  window.rs
UniversalUI_Native/src/x11/: event.rs  init.rs  window.rs
corelib/: Cargo.toml
corelib/src/: lib.rs
test/: main  main.cpp
