[package]
name = "UniversalUICore"
version = "0.1.0"
authors = ["Seb Hall <sebhalldesigns@gmail.com>"]
description = "core library for universalui"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.147"
colored = "2.0.0"

[lib]
crate-type = ["cdylib"]
