[package]
name = "UniversalUI_Native"
version = "0.1.0"
license = "MIT"
edition = "2021"
authors = ["Seb Hall <sebhalldesigns@gmail.com>"]
description = "Native platform functionality for the UniversalUI framework. Examples include windowing and events, file management and notifications."
documentation = "https://universalui.org/docs.html"

[lib]
crate-type = ["cdylib"]

[dependencies]
UniversalUI_Base = "0.1.2"
raw-window-handle = "0.5.2"
libc = "0.2.147"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.48.0", features = [ 
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
#objc2 = "0.4.0"

[target.'cfg(target_os = "linux")'.dependencies]
x11rb = "0.12.0"
